--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,8 @@ dependencies:
   flutter:
     sdk: flutter
   floor: ^1.5.0
-
+  sqflite: ^2.4.1
+  path: ^1.9.0
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
